docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/CPCommand.md
# `CPCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.CPCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.CPCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a CP command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|-----------------------------|-------------------------------------|
| [`Dof`](#CPCommand.Dof)     | Gets the degree of freedom label.   |
| [`Index`](#CPCommand.Index) | Gets the command index.             |
| [`Name`](#CPCommand.Name)   | Gets the command name.              |
| [`Ncp`](#CPCommand.Ncp)     | Gets the number of coupled nodes.   |
| [`Nodes`](#CPCommand.Nodes) | Gets the nodes.                     |

<a id="property-detail"></a>

## Property detail

<a id="CPCommand.Dof"></a>

### *property* CPCommand.Dof *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the degree of freedom label.

<!-- !! processed by numpydoc !! -->

<a id="CPCommand.Index"></a>

### *property* CPCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="CPCommand.Name"></a>

### *property* CPCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="CPCommand.Ncp"></a>

### *property* CPCommand.Ncp *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the number of coupled nodes.

<!-- !! processed by numpydoc !! -->

<a id="CPCommand.Nodes"></a>

### *property* CPCommand.Nodes *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[int](https://docs.python.org/3/library/functions.html#int)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the nodes.

<!-- !! processed by numpydoc !! -->

